labs/labs-03/spring-petclinic-networking.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-petclinic
  namespace: cf-workloads
  labels:
    app: spring-petclinic
    service: spring-petclinic
spec:
  ports:
  - port: 8080
    name: http
  selector:
    app: spring-petclinic
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: spring-petclinic
  namespace: cf-workloads
spec:
  hosts:
  - “spring-petclinic.workshop-XX.frankcarta.com”
  gateways:
  - cf-system/istio-ingressgateway
  http:
  - route:
    - destination:
        host: spring-petclinic
        port:
          number: 8080
